deploy/deploy-mux-api2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mux-api2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mux-api2
  template:
    metadata:
      labels:
        app: mux-api2
    spec:
      containers:
        - name: mux-api2
          image: gcr.io/hoang-duc-techology/go-mux-restapi2:v1.0.1
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8080
