deploy/deploy-mux-api2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mux-api2-service
spec:
  selector:
    app: mux-api2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
